force-app/main/default/objects/EN_Supplier__c/EN_Supplier__c.object-meta.xml
<CustomObject>
    <label>仕入先情報</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>仕入先情報名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>