force-app/main/default/objects/EN_Supplier__c/fields/Costprice__c.field-meta.xml
<CustomField>
    <fullName>Costprice__c</fullName>
    <label>原価金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>