force-app/main/default/objects/EN_Supplier__c/fields/Grossprofit__c.field-meta.xml
<CustomField>
    <fullName>Grossprofit__c</fullName>
    <label>粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>