force-app/main/default/objects/EN_Supplier__c/fields/Opp__c.field-meta.xml
<CustomField>
    <fullName>Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>仕入先情報</relationshipLabel>
    <relationshipName>OppSupplier</relationshipName>
    <type>Lookup</type>
</CustomField>