force-app/main/default/objects/EN_Supplier__c/fields/OrderAmount__c.field-meta.xml
<CustomField>
    <fullName>OrderAmount__c</fullName>
    <label>受注金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>