force-app/main/default/objects/EN_Supplier__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <label>品名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>