force-app/main/default/objects/EN_Supplier__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>仕入予定先名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>