force-app/main/default/objects/EN_Supplier__c/fields/VarietyName__c.field-meta.xml
<CustomField>
    <fullName>VarietyName__c</fullName>
    <label>品種名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>